--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bibtool",
   "displayName": "BibTool",
+  "publisher":"danielgruss",
   "description": "Interact with BibTool to look up bib entries on a remote server",
   "repository": "https://github.com/dgruss/vscode-bibtool",
   "version": "0.0.1",
