default key binding -> F2 when in latex (which is not used there)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publisher":"danielgruss",
   "description": "Interact with BibTool to look up bib entries on a remote server",
   "repository": "https://github.com/dgruss/vscode-bibtool",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.74.0"
   },
@@ -20,6 +20,13 @@
       {
         "command": "bibtool.search",
         "title": "Use BibTool search"
+      }
+    ],
+    "keybindings": [
+      {
+        "command": "bibtool.search",
+        "key": "F2",
+        "when": "editorTextFocus && !editorReadonly && editorLangId =~ /^latex$|^latex-expl3$|^rsweave$|^jlweave$|^pweave$/"
       }
     ]
   },
